# docs/swagger.json
@@ -84,7 +84,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.LoginResponse"
+                            "$ref": "#/definitions/handlers.ViewCurrentUserResponse"
                         }
                     },
                     "403": {
@@ -155,6 +155,14 @@
                 "token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJle..."
+                }
+            }
+        },
+        "handlers.ViewCurrentUserResponse": {
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
                 }
             }
         },
